--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="icon" href="files/yu.png" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Chengyu Zhou</title>
+<title>Zhengying Lou</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -20,12 +20,12 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Chengyu Zhou</h1>
+<h1>Zhengying Lou</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://chengyu-1.github.io/"><img src="files/profile2.jpg" alt="photo" width="200px" height="224px" /></a>&nbsp;</td>
-<td align="left"><p>M.S. Student (Sept. 2021-present)<br /> 
-<a href="https://ccrc.kaust.edu.sa/">Clean Combustion Research Center (CCRC)</a> <br />
+<a href="https://zhengying-lou.github.io/"><img src="files/profile2.jpg" alt="photo" width="200px" height="224px" /></a>&nbsp;</td>
+<td align="left"><p>Ph.D. Student (2023-present)<br /> 
+<a href="https://cemse.kaust.edu.sa/ctl">Communication Theory Lab (CTL)</a> <br />
 <a href="https://www.kaust.edu.sa/en">King Abdullah University of Science and Technology (KAUST)</a><br /></p>
 <p>Office: 4203-WS18, Level 4, Building 5 (sea side) <br />
 Address: Thuwal, Jeddah, 23955-6900, Saudi Arabia <br />
