--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a href="https://www.kaust.edu.sa/en">King Abdullah University of Science and Technology (KAUST)</a><br /></p>
 <p>Office: 4203-WS18, Level 4, Building 5 (sea side) <br />
 Address: Thuwal, Jeddah, 23955-6900, Saudi Arabia <br />
-Email address: chengyu.zhou@kaust.edu.sa <br /></p>
+Email address: zhengying.lou@kaust.edu.sa <br /></p>
 
 <p><a href="files/CV.pdf">Curriculum Vitae</a><br />
 </td></tr></table>
@@ -52,9 +52,9 @@ Email address: chengyu.zhou@kaust.edu.sa <br /></p>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>M.S., Mechanical Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-present (Advisor: <a href="https://www.kaust.edu.sa/en/study/faculty/aamir-farooq/">Prof. Aamir Farooq</a>, Co-advisor: <a href="https://www.kaust.edu.sa/en/study/faculty/mani-sarathy/">Prof. Mani Sarathy</a>) </p>
+<li><p>M.S., Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-present (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
 </li>
-<li><p>B.S., Energy and Power Engineering, <a href="https://en.dlut.edu.cn/">Dalian University of Technology</a> (DLUT), China, 2017-2021 (Advisor: <a href="http://faculty.dlut.edu.cn/jiaming/en/index.htm/">Prof. Ming Jia</a>)</p>
+<li><p>B.S., Telecommunication Engineering, <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC), China, 2017-2021 (Advisor: <a href="https://ieeexplore.ieee.org/author/37594847900">Prof. Chang Wu</a>)</p>
 </li>
 </ul>
 </td>
