--- a/index.html
+++ b/index.html
@@ -37,22 +37,16 @@ Email address: zhengying.lou@kaust.edu.sa <br /></p>
 
 <h2>Research interests</h2>
 <ul>
-<li><p>Laser diagnostics and shock tubes</p>
+<li><p>Stochastic Geometry</p>
 </li>
-<li><p>Chemical kinetics for elementary gas-phase reactions</p>
-</li>
-<li><p>High-precision measurement of rate coefficients using laser and shock tube techniques</p>
-</li>
-<li><p>Development of detailed chemical models for alternative fuels</p>
-</li>
-<li><p>Automatic mechanism generation and reduction</p>
+<li><p>Wireless Communications</p>
 </li>
 
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>Ms/PhD, Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-present (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
+<li><p>MS/PhD, Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-present (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
 </li>
 <li><p>B.S., Telecommunication Engineering, <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC), China, 2017-2021 (Advisor: <a href="https://ieeexplore.ieee.org/author/37594847900">Prof. Chang Wu</a>)</p>
 </li>
