--- a/research.html
+++ b/research.html
@@ -24,59 +24,27 @@
 <h2>Selected papers</h2>
 
 <ul>
-<li><p>Detailed experimental and kinetic modeling study of isoprene oxidation at high temperature (in progress)</p>
+<li><p><a href="https://pubs.acs.org/doi/10.1021/acs.energyfuels.9b02249">I-WKNN: Fast-speed and high-accuracy WIFI positioning for intelligent sports stadiums</a></p>
 <ul>
-<li><p><b><u>C. Zhou</u></b>, J. Zou, S.S. Nagaraja, S.M. Sarathy, A. Farooq</p>
+<li><p>Z. Zhao, <b><u>Z. Lou</u></b>, R. Wang, Q. Li, X. Xu</p>
 </li>
-<li><p><i>Combustion and Flame</i></p>
+<li><p><i>Computers & Electrical Engineering, 2022</i></p>
+</li>
+</ul>
+</li>
+</ul>
+  
+<ul>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/9504595">Green Tethered UAVs for EMF-Aware Cellular Networks</a></p>
+<ul>
+<li><p><b><u>Z. Lou</u></b>, A. Elzanaty, M. Alouini</p>
+</li>
+<li><p><i>IEEE Transactions on Green Communications and Networking, 2021</i></p>
 </li>
 </ul>
 </li>
 </ul>
 
-<ul>
-<li><p>An investigation of 1-butene and 1-pentene thermal decomposition (in revision)</p>
-<ul>
-<li><p><b><u>C. Zhou</u></b>, D. Liu, A. Farooq</p>
-</li>
-<li><p><i>Combustion and Flame</i></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<ul>
-<li><p>C7 reaction mechanism and its self-imitation in the kinetic modeling of PAH formation (in revision)</p>
-<ul>
-<li><p>H. Jin, <b><u>C. Zhou</u></b>, A. Farooq</p>
-</li>
-<li><p><i>Combustion and Flame</i></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://pubs.acs.org/doi/10.1021/acs.energyfuels.0c03086">Construction of a Skeletal Oxidation Mechanism for 2,5-Dimethylfuran Using Decoupling Methodology and Reaction Class-Based Global Sensitivity Analysis</a></p>
-<ul>
-<li><p><b><u>C. Zhou</u></b>, Y. Chang, P. Wang, B. Niu, M. Jia</p>
-</li>
-<li><p><i>Energy and Fuels, 2020</i></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://pubs.acs.org/doi/10.1021/acs.energyfuels.9b02249">Reduction of Detailed Chemical Mechanisms Using Reaction Class-Based Global Sensitivity and Path Sensitivity Analyses</a></p>
-<ul>
-<li><p>Y. Chang, M. Jia, B. Niu, M. Xie, <b><u>C. Zhou</u></b></p>
-</li>
-<li><p><i>Energy and Fuels, 2019</i></p>
-</li>
-</ul>
-</li>
-</ul>
 
 </td>
 </tr>
