--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 <h2>Selected papers</h2>
 
 <ul>
-<li><p><a href="https://pubs.acs.org/doi/10.1021/acs.energyfuels.9b02249">I-WKNN: Fast-speed and high-accuracy WIFI positioning for intelligent sports stadiums</a></p>
+<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0045790621005516">I-WKNN: Fast-speed and high-accuracy WIFI positioning for intelligent sports stadiums</a></p>
 <ul>
 <li><p>Z. Zhao, <b><u>Z. Lou</u></b>, R. Wang, Q. Li, X. Xu</p>
 </li>
