--- a/awards.html
+++ b/awards.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="icon" href="files/yu.png" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Chengyu Zhou</title>
+<title>Zhengying Lou</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -23,20 +23,11 @@
 </div>
 <h2>Selected awards</h2>
 <ul>
-<li><p>Research Innovation Award (1/185), DLUT, 2017-2018</p>
+<li><p>Dragon Cup National Competition (National First Prize), UESTC, 2019</p>
 </li>
-<li><p>Outstanding Merit Student (4/185), DLUT, 2017-2018</p>
+<li><p>Research Innovation Award (Meritorious Prize), UESTC, 2018</p>
 </li>
-<li><p>Model Student of Academic Records (Second Prize), DLUT, 2017-2018</p>
-</li>
-<li><p>National College Mathematics Competition (Third Prize), Chinese Mathematical Society, 03/2019</p>
-</li>
-<li><p>China Innovation Methods Competition (Second Prize), Ministry of Science and Technology of China, 05/2019</p>
-</li>
-<li><p>Undergraduate Innovation and Entrepreneurship Training Program (Excellent grade), DLUT, 03/2020</p>
-</li>
-<li><p>Full Master scholarship, KAUST, 2021-2023</p>
-</li>
+
 </ul>
 </td>
 </tr>
