--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="icon" href="files/yu.png" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Chengyu Zhou</title>
+<title>Zhengying Lou</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
