--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 Address: Thuwal, Jeddah, 23955-6900, Saudi Arabia <br />
 Email address: zhengying.lou@kaust.edu.sa <br /></p>
 
-<p><a href="files/CV.pdf">Curriculum Vitae</a><br />
+<p><a href="files/CV.pdf">Curriculum Vitae</a> (Last updated: Sept. 2020) <br />
 </td></tr></table>
 <p>  </p> 
 
