--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ Email address: zhengying.lou@kaust.edu.sa <br /></p>
 </li>
 <li><p>Wireless Communications</p>
 </li>
+<li><p>Non-Terrestrial Network</p>
+</li>
 
 </li>
 </ul>
