--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ Email address: zhengying.lou@kaust.edu.sa <br /></p>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>MS/PhD, Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-present (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
+<li><p>PhD, Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2023-present (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
+</li>
+<li><p>MS, Electrical and Computer Engineering, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Saudi Arabia, 2021-2022 (Advisor: <a href="https://cemse.kaust.edu.sa/ctl/people/person/mohamed-slim-alouini">Prof. Mohamed-Slim Alouini</a>) </p>
 </li>
 <li><p>B.S., Telecommunication Engineering, <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a> (UESTC), China, 2017-2021 (Advisor: <a href="https://ieeexplore.ieee.org/author/37594847900">Prof. Chang Wu</a>)</p>
 </li>
