--- a/awards.html
+++ b/awards.html
@@ -23,9 +23,11 @@
 </div>
 <h2>Selected awards</h2>
 <ul>
-<li><p>Dragon Cup National Competition (National First Prize), UESTC, 2019</p>
+<li><p>Outstanding Graduate, UESTC, 2021</p>
 </li>
-<li><p>Research Innovation Award (Meritorious Prize), UESTC, 2018</p>
+<li><p>Meritorious Winner, American Mathematical Modeling, 2020</p>
+</li>
+<li><p>Outstanding Students’ Scholarship, UESTC, 2018</p>
 </li>
 
 </ul>
