--- a/awards.html
+++ b/awards.html
@@ -29,7 +29,9 @@
 </li>
 <li><p>Outstanding Students’ Scholarship, UESTC, 2018</p>
 </li>
-
+<li><p>Outstanding Students’ Scholarship, UESTC, 2018</p>
+</li>
+  
 </ul>
 </td>
 </tr>
